<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.kongweiguang</groupId>
    <artifactId>kong</artifactId>
    <version>0.5</version>
    <packaging>pom</packaging>

    <name>${project.artifactId}</name>
    <description>Java 工具包</description>

    <scm>
        <connection>https://github.com/kongweiguang/kong.git</connection>
        <url>https://github.com/kongweiguang/kong</url>
    </scm>

    <url>https://github.com/kongweiguang</url>

    <developers>
        <developer>
            <email>240524885@qq.com</email>
            <name>kongweiguang</name>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <modules>
        <module>kong-core</module>
        <module>kong-http</module>
        <module>kong-json</module>
        <module>kong-bus</module>
        <module>kong-spring</module>
        <module>kong-db</module>
        <module>kong-ai</module>
        <module>kong-socket</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <test.junit>5.10.0</test.junit>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.kongweiguang</groupId>
                <artifactId>kong-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--test-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
            <version>${test.junit}</version>
        </dependency>
    </dependencies>


    <profiles>
        <profile>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <encoding>utf-8</encoding>
                            <source>21</source>
                            <target>21</target>
                        </configuration>
                        <groupId>org.apache.maven.plugins</groupId>
                    </plugin>
                    <plugin>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <configuration>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                            <serverId>ossrh</serverId>
                        </configuration>
                        <extensions>true</extensions>
                        <groupId>org.sonatype.plugins</groupId>
                        <version>1.6.13</version>
                    </plugin>
                    <!-- 生成java source.jar -->
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                                <id>attach-sources</id>
                            </execution>
                        </executions>
                        <groupId>org.apache.maven.plugins</groupId>
                        <version>2.2.1</version>
                    </plugin>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                            </execution>
                        </executions>
                        <groupId>org.apache.maven.plugins</groupId>
                        <version>1.5</version>
                    </plugin>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <additionalparam>-Xdoclint:none</additionalparam>
                            <charset>UTF-8</charset>
                            <docencoding>UTF-8</docencoding>
                            <encoding>UTF-8</encoding>
                            <nohelp>true</nohelp>
                            <show>private</show>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <groupId>org.apache.maven.plugins</groupId>
                        <version>2.9.1</version>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <repository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
            </distributionManagement>


            <id>ossrh</id>
        </profile>

    </profiles>

</project>